# notion-playground

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  script.sh  tox.ini
src/: __init__.py  client.py  http.py  logger.py  types.py
src/notion/: service.py
src/notion/endpoints/: __init__.py  databases.py
src/service/: notion.py
tests/: conftest.py  test_client.py  test_notion.py
