[tool.poetry]
name = "article-playground"
version = "0.1.0"
description = ""
authors = ["socar-grab <grab@socar.kr>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
requests = "^2.27.1"
httpx = "^0.22.0"
mypy = "^0.931"
key = "^0.4"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
pycln = "^1.1.0"
isort = "^5.10.1"
black = "^22.1.0"
python-dotenv = "^0.19.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
